refactor(rename): move files to src/ios

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 WebMIDIAPIShimForiOS.xcodeproj/project.xcworkspace/xcuserdata/
 WebMIDIAPIShimForiOS.xcodeproj/xcuserdata/
+src/ios/WebMIDIAPIShimForiOS.xcodeproj/project.xcworkspace/xcuserdata/mazinsw.xcuserdatad/UserInterfaceState.xcuserstate
+src/ios/.DS_Store
