--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "cordova-plugin-chordino",
-  "version": "1.0.4",
-  "description": "Detect chord from microphone",
+  "name": "cordova-plugin-webmidi",
+  "version": "1.0.0",
+  "description": "Web MIDI API for Cordova on iOS",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/recifra/cordova-plugin-chordino.git"
+    "url": "git+https://github.com/recifra/cordova-plugin-webmidi.git"
   },
   "keywords": [
     "cordova",
     "chordino"
   ],
   "author": "",
-  "license": "GPL-3.0-or-later",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/recifra/cordova-plugin-chordino/issues"
+    "url": "https://github.com/recifra/cordova-plugin-webmidi/issues"
   },
-  "homepage": "https://github.com/recifra/cordova-plugin-chordino#readme",
+  "homepage": "https://github.com/recifra/cordova-plugin-webmidi#readme",
   "cordova": {
-    "id": "cordova-plugin-chordino",
+    "id": "cordova-plugin-webmidi",
     "platforms": [
-      "android"
+      "ios"
     ]
   },
   "publishConfig": {
